iptables.save
# Generated by iptables-save v1.4.21 on Sat Dec  7 00:21:35 2019
*filter
:INPUT DROP [60484:17032551]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 21 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 20 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 1919 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 2048 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 30000:40000 -j ACCEPT
-A INPUT -p udp -m udp --dport 30000:40000 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 990 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 4096 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 873 -j ACCEPT
-A INPUT -p udp -m udp --dport 37943 -j ACCEPT
-A INPUT -p udp -m udp --dport 37945 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p udp -m udp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8080 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 8081 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 6950 -j ACCEPT
-A INPUT -p udp -m udp --dport 6881 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 6880 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 40000:40100 -j ACCEPT
-A INPUT -p udp -m udp --dport 40000:40100 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 47474 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 873 -j ACCEPT
-A OUTPUT -j ACCEPT
COMMIT
# Completed on Sat Dec  7 00:21:35 2019
